# qa_guru_4_diplom

./: .env  .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini
models/: cart.py  product.py  user.py
notifications/: config.json
session/: session.py
steps/: api_steps.py  test_steps.py  ui_steps.py
tests/: test_auth.py  test_cart.py
utils/: attach.py
